--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "editorconfig": "editorconfig-cli",
-    "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
+    "stylelint": "stylelint \"source/sass/**/*.scss\" --customSyntax postcss-scss",
     "test": "npm run editorconfig & npm run stylelint & eslint source/js/",
     "build": "cross-env NODE_ENV=production gulp build",
     "dev": "cross-env NODE_ENV=production gulp dev",
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
+    "@htmlacademy/editorconfig-cli": "^1.0.0",
     "autoprefixer": "^10.4.13",
     "babel-loader": "8.2.5",
     "browser-sync": "^2.27.11",
@@ -49,6 +50,7 @@
     "cross-env": "^7.0.3",
     "del": "^6.1.1",
     "duplicate-package-checker-webpack-plugin": "^3.0.0",
+    "eslint": "^8.37.0",
     "gulp": "^4.0.2",
     "gulp-cached": "^1.1.1",
     "gulp-csso": "^4.0.1",
@@ -64,7 +66,10 @@
     "imagemin-mozjpeg": "^10.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^10.0.1",
+    "postcss-scss": "^4.0.6",
     "sass": "^1.58.1",
+    "stylelint": "^15.4.0",
+    "stylelint-config-htmlacademy": "^1.1.4",
     "webpack": "4.42.0",
     "webpack-stream": "5.2.1"
   }
